--- a/src/main/resources/assets/woodentoolsremoved/lang/sr_sp.json
+++ b/src/main/resources/assets/woodentoolsremoved/lang/sr_sp.json
@@ -19,15 +19,15 @@
 
 	"item.woodentoolsremoved.powder_bowl.tooltip1": "Активирај помоћу кремена да разнесеш стене у ваздух.",
 	"item.woodentoolsremoved.powder_bowl.tooltip2": "Одмакни се мало пре тога.",
-	"block.woodentoolsremoved.powder_bowl.error": "Make a spark using flint or a tool made of flint.",
+	"block.woodentoolsremoved.powder_bowl.error": "Направите варницу користећи кремен или алат од кремена.",
 
 	"item.woodentoolsremoved.original.tooltip1": "Ово је само модел.",
 	"item.woodentoolsremoved.original.tooltip2": "Бескорисно је. Направи прави алат од тврђих материјала.",
-	"item.woodentoolsremoved.tetra.tooltip": "Wooden tool heads are useless. Try using flint or stone.",
+	"item.woodentoolsremoved.tetra.tooltip": "Алатке са дрвеном главом су бескорисне. Покушајте да користите кремен или камен.",
 	"item.woodentoolsremoved.javelin1dur.tooltip": "Превише је оштећено да га бациш. Још један замах и готово.",
 
-	"item.woodentoolsremoved.peaceful.tooltip1": "Not very sturdy but it should take down a tree.",
-	"item.woodentoolsremoved.peaceful.tooltip2": "Also might help you get coal from a coal deposit in stone.",
+	"item.woodentoolsremoved.peaceful.tooltip1": "Није баш чврсто, али требало би да сруши дрво.",
+	"item.woodentoolsremoved.peaceful.tooltip2": "Такође вам може помоћи да добијете угаљ из лежишта угља у камену.",
 
 	"ego.advancement.root": "Твоја прича почиње",
 	"ego.advancement.root.desc": "Овај свет ће се клањати твојој вољи.\n\nАли прво се треба повиновати његовој вољи; почни са прикупљањем малих ствари и меких материјала.",
@@ -40,5 +40,7 @@
 	"ego.advancement.stone_in_easy_mode": "Добијање камена (лак режим)",
 	"ego.advancement.stone_in_easy_mode.desc": "Алатка од кремена би требало да може да разбије неколико камених блокова. \n\nДаље ћеш успети сам.",
 	"ego.advancement.stone_in_null_mode": "Авантура почиње",
-	"ego.advancement.stone_in_null_mode.desc": "Сакупи мало камена.\n\nДаље ћеш успети сам. Срећно!"
+	"ego.advancement.stone_in_null_mode.desc": "Сакупи мало камена.\n\nДаље ћеш успети сам. Срећно!",
+
+	"entity.woodentoolsremoved.thrown_javelin_projectile": "Копље од кремена"
 }
